Fix small screen header image whitespace issue

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -44,7 +44,7 @@ header::before {
   background-image: url("https://images.unsplash.com/photo-1524169358666-79f22534bc6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80");
   background-size: cover;
   transform-origin: center center 0;
-  transform: translateZ(-1px) translateY(-3.5em)scale(2.07);
+  transform: translateZ(-1px) translateY(-7em)scale(2.2);
   z-index: -1;
   min-height: 100vh;
 }
